--- a/src/Kooco.Pikachu.Blazor/Pages/SalesReport/SalesReport.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SalesReport/SalesReport.razor
@@ -14,13 +14,19 @@
             <h3 class="text-dark">@L["SalesReport"]</h3>
         </Column>
         <Column ColumnSize="ColumnSize.Is6" TextAlignment="TextAlignment.End">
-            <PikachuButton Class="pk-btn-sm pk-btn-outline-primary" Clicked="() => UnitChangedAsync(ReportCalculationUnits.Daily)">
+            <PikachuButton Clicked="() => UnitChangedAsync(ReportCalculationUnits.Daily)"
+                           Class="@("pk-btn-sm " + (Filters.ReportCalculationUnit == ReportCalculationUnits.Daily ? "pk-btn-primary" : "pk-btn-outline-primary"))"
+                           Disabled="IsLoading">
                 @L["Daily"]
             </PikachuButton>
-            <PikachuButton Class="pk-btn-sm pk-btn-outline-primary" Clicked="() => UnitChangedAsync(ReportCalculationUnits.Weekly)">
+            <PikachuButton Clicked="() => UnitChangedAsync(ReportCalculationUnits.Weekly)"
+                           Class="@("pk-btn-sm " + (Filters.ReportCalculationUnit == ReportCalculationUnits.Weekly ? "pk-btn-primary" : "pk-btn-outline-primary"))"
+                           Disabled="IsLoading">
                 @L["Weekly"]
             </PikachuButton>
-            <PikachuButton Class="pk-btn-sm pk-btn-outline-primary" Clicked="() => UnitChangedAsync(ReportCalculationUnits.Monthly)">
+            <PikachuButton Clicked="() => UnitChangedAsync(ReportCalculationUnits.Monthly)"
+                           Class="@("pk-btn-sm " + (Filters.ReportCalculationUnit == ReportCalculationUnits.Monthly ? "pk-btn-primary" : "pk-btn-outline-primary"))"
+                           Disabled="IsLoading">
                 @L["Monthly"]
             </PikachuButton>
         </Column>
